# sandbox-ai

./: .editorconfig  .gitignore  README.md  pyproject.toml
examples/: chat_plugins.py  examples.ipynb  makemore_mlp.ipynb  simple_ffn.ipynb  simple_mnist.ipynb  slack_sentiment.ipynb
learn/: cnn_pytorch.ipynb  examples.ipynb  feed_forward_simple.ipynb  gpt.ipynb  makemore_bigrams.ipynb  min-char-rnn.ipynb  min_char_rnn.ipynb  scratch.ipynb  scratch.py  simple_ffn.ipynb  simple_mnist.ipynb  simple_nn.py  stable_diff.ipynb  util.py
learn/data/: pg.txt
learn/microtensor/: scratch.ipynb  tensor.py
notebooks/: cnn_pytorch.ipynb  langchain_agent.ipynb  langchain_custom_tools.ipynb  makemore_bigrams.ipynb  makemore_mlp.ipynb  slack_sentiment.ipynb  tensor_test.ipynb  yelp_dataset.ipynb
openai/: hello.py
projects/ask-notion/: ask.py  ask_notion.ipynb
projects/ask/ask_drive/: ask.py
projects/ask/ask_notion/: ingest.py
projects/ask/ask_pdf/: ask.py
projects/ask_drive/: ingest.py
projects/ask_folder/: chatbot.py
projects/ask_sql/: ingest.py  query.py  test.py
projects/babyagi/: main.py
projects/conversational_html/: app.py
projects/conversational_html/templates/: index.html
projects/generate_html_gpt/: main.py  output.html  start.html
projects/her_gpt/: elevenlabs.py  main.py  recorder.py
projects/image_describer/: main.py
projects/professor/: README.md  gen_md.py  learn.py  nn_plan.json  nn_plan.md  piano.json  piano.md  st.py  st_test.py
projects/professor/examples/: chess_plan.md  golf_plan.md  neural_networks_plan.md
projects/smart_site/conversational_html/: app.py
projects/smart_site/generate_html_gpt/: main.py
projects/smart_site/image_describer/: main.py
projects/yelp_dataset/: gen_bars.py
simplenn/: nn.py
test/: test_nn.py
