[tool.poetry]
name = "sandbox-ai"
version = "0.1.0"
description = "sandbox and stuff"
authors = ["David Byttow <david@sorare.com>"]
readme = "README.md"
packages = [{include = "sandbox_ai"}]

[tool.poetry.dependencies]
python = ">=3.10.4,<3.12"
jupyter = "^1.0.0"
torch = "^1.13.1"
torchvision = "^0.14.1"
numpy = "^1.24.2"
matplotlib = "^3.7.1"
pandas = "^1.5.3"
nltk = "^3.8.1"
seaborn = "^0.12.2"
tqdm = "^4.65.0"
transformers = "^4.26.1"
scipy = "^1.10.1"
datasets = "^2.10.1"
openai = "^0.27.2"
elevenlabslib = "^0.3.0"
soundfile = "^0.12.1"
sounddevice = "^0.4.6"
pyaudio = "^0.2.13"


[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
autopep8 = "^2.0.2"
yapf = "^0.32.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
