[tool.poetry]
name = "sandbox-ai"
version = "0.1.0"
description = "sandbox and stuff"
authors = ["David Byttow <david@sorare.com>"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = ">=3.10.4,<3.12"
jupyter = "^1.0.0"
torch = "^2.0.0"
torchvision = "^0.15.1"
numpy = "^1.24.2"
matplotlib = "^3.7.1"
pandas = "^1.5.3"
nltk = "^3.8.1"
seaborn = "^0.12.2"
tqdm = "^4.65.0"
transformers = "^4.26.1"
scipy = "^1.10.1"
datasets = "^2.10.1"
openai = "^0.27.2"
elevenlabslib = "^0.3.0"
soundfile = "^0.12.1"
sounddevice = "^0.4.6"
pyaudio = "^0.2.13"
diffusers = "^0.14.0"
accelerate = "^0.17.1"
tiktoken = "^0.3.2"
faiss-cpu = "^1.7.3"
langchain = "^0.0"
pdfreader = "^0.1.12"
pypdf2 = "^3.0.1"
flask = "^2.2.3"
flask-socketio = "^5.3.3"
google-search-results = "^2.4.2"
pydantic = "^1.10.7"
google-api-python-client = "^2.85.0"
google-auth-httplib2 = "^0.1.0"
google-auth-oauthlib = "^1.0.0"
python-dateutil = "^2.8.2"
psycopg2 = "^2.9.6"
llama-index = "^0.5.25"


[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
autopep8 = "^2.0.2"
yapf = "^0.32.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
